# pdotc

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: client.rs  polymesh.rs
src/: client.rs  lib.rs  network.rs  pallets.rs  rpc.rs  ss58.rs  utils.rs
src/pallets/: balances.rs  identity.rs  proxy.rs  staking.rs  storage.rs  timestamp.rs
tests/: client.rs  extrinsics.rs
tests/integrations/: kusama.rs  main.rs  polkadot.rs  westend.rs  xt.rs
