[package]
name = "pdotc"
version = "0.4.3"
authors = ["Trevor Arjeski <trevor.arjeski@crypto.com>"]
description = "A minimal polkadot/westend client"
keywords = ["polkadot", "substrate"]
license = "MIT"
repository = "https://github.com/trevor-crypto/pdotc"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
parity-scale-codec = { version = "3.2", default-features = false, features = ["derive"] }
sp-core = { version = "11.0", default-features = false, features = ["std", "full_crypto"] }
primitive-types = { version = "0.12", default-features = false, features = ["codec", "scale-info", "serde"] }
serde = "1"
serde_json = "1"
thiserror = "1"

[dev-dependencies]
paste = "1"
secp256k1 = { version = "0.25", features = ["recovery"] }
ureq = { version = "2.3", features = ["json"] }
