[package]
name = "pdotc"
version = "0.8.0"
authors = ["Trevor Arjeski <trevor.arjeski@crypto.com>"]
description = "A minimal polkadot/westend client"
keywords = ["polkadot", "substrate"]
license = "MIT"
repository = "https://github.com/trevor-crypto/pdotc"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2"
blake2 = "0.10"
hex = "0.4"
primitive-types = { version = "0.12", default-features = false, features = ["codec","scale-info","serde"] }
serde = "1"
serde_json = "1"
thiserror = "1"

[dependencies.parity-scale-codec]
version = "3.2"
default-features = false
features = ["derive"]

[dependencies.sp-core]
default-features = false
features = ["full_crypto", "serde"]
git = "https://github.com/paritytech/substrate.git"
rev = "713e34a"

[dependencies.sp-storage]
default-features = false
features = ["serde"]
git = "https://github.com/paritytech/substrate.git"
rev = "713e34a"

[dev-dependencies]
paste = "1"
ureq = { version = "2.3", features = ["json"] }
